--- a/main.html
+++ b/main.html
@@ -4,10 +4,21 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<button id="button-1" type="button" class="btn btn-primary">Button-1</button>
+	<button id="button-2" type="button" class="btn btn-outline-secondary">Button-2</button>
+	<button id="button-3" type="button" class="btn btn btn-lg">Button-3</button>
+	<button id="button-4" type="button" class="btn btn btn-sm">Button-4</button>
+	<div class="d-grid">
+	<button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
+	</div>
+	<a id="button-6" href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Button-6</a>
+	<a id="button-7" href="#" class="btn btn-outline-light btn-lg active" role="button" aria-pressed="true">Button-7</a>
+	<a id="button-8" href="#" >Button-8</a>
+		<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
 
