--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 	<button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
 	</div>
 	<a id="button-6" href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Button-6</a>
-	<a id="button-7" href="#" class="btn btn-outline-light btn-lg active" role="button" aria-pressed="true">Button-7</a>
+	<a id="button-7" href="#" class="btn btn-light btn-outline-light btn-lg active" role="button" aria-pressed="true">Button-7</a>
 	<a id="button-8" href="#" >Button-8</a>
 		<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
