--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 	<button id="button-1" type="button" class="btn btn-primary">Button-1</button>
 	<button id="button-2" type="button" class="btn btn-outline-secondary">Button-2</button>
 	<button id="button-3" type="button" class="btn btn btn-lg">Button-3</button>
-	<button id="button-4" type="button" class="btn btn btn-sm">Button-4</button>
+	<button id="button-4" type="button" class="btn btn-danger btn-sm">Button-4</button>
 	<div class="d-grid">
 	<button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
 	</div>
-	<a id="button-6" href="#" class="btn btn-info btn-lg active" role="button" aria-pressed="true">Button-6</a>
+	<a id="button-6" href="#" class="btn btn-info disabled active" role="button" aria-pressed="true">Button-6</a>
 	<a id="button-7" href="#" class="btn btn-light btn-outline-light btn-lg active" role="button" aria-pressed="true">Button-7</a>
-	<a id="button-8" href="#" >Button-8</a>
+	<a id="button-8" class="btn btn-link" href="#" >Button-8</a>
 		<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
