--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<button id="button-1" type="button" class="btn btn-primary">Button-1</button>
 	<button id="button-2" type="button" class="btn btn-outline-secondary">Button-2</button>
-	<button id="button-3" type="button" class="btn btn btn-lg">Button-3</button>
+	<button id="button-3" type="button" class="btn btn-success btn-lg">Button-3</button>
 	<button id="button-4" type="button" class="btn btn-danger btn-sm">Button-4</button>
 	<div class="d-grid">
 	<button id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button-5</button>
